--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "react-spinners": "^0.10.6"
+    "react-spinners": "^0.10.6",
+    "simple-react-lightbox": "^3.6.6"
   },
   "scripts": {
     "start": "react-scripts start",
